--- a/Hotel.Api/appsettings.json
+++ b/Hotel.Api/appsettings.json
@@ -1,17 +1,4 @@
 {
-/*
-The following identity settings need to be configured
-before the project can be successfully executed.
-For more info see https://aka.ms/dotnet-template-ms-identity-platform 
-*/
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-
-    "CallbackPath": "/signin-oidc"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -19,5 +6,9 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=localhost;Initial Catalog=HotelManagement;Integrated Security=SSPI;"
+  },
+  "SecretTokenKey": "b0169bf8-31a4-4279-83e1-86483797c351491349eb-34ac-4750-a607-d6245d436136"
 }
