-Changed from API to Web App

--- a/Hotel.Api/Hotel.Api.csproj
+++ b/Hotel.Api/Hotel.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Hotel.Api.Infrastructure\Hotel.Api.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
