-Added all views and other changes

--- a/Hotel.WebApp/appsettings.json
+++ b/Hotel.WebApp/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DbInfo": "Server=localhost;Initial Catalog=HotelManagement;Integrated Security=SSPI;"
+  "DbInfo": {
+    "ConnectionString": "Server=localhost;Initial Catalog=HotelManagement;Integrated Security=SSPI;"
   }
 }
